Prevent the registering the OpflowRpcChecker class